# xng

./: .gitmodules  BUILDING.md  CMakeLists.txt  README.md  ROADMAP.md  install_dependencies.sh
adapters/: README.md
adapters/android/: android.cpp  androidapp.cpp
adapters/assimp/: assimpimporter.cpp
adapters/box2d/: box2d.cpp  box2dinclude.hpp  colliderbox2d.cpp  colliderbox2d.hpp  commonbox2d.cpp  commonbox2d.hpp  jointbox2d.cpp  jointbox2d.hpp  rigidbodybox2d.cpp  rigidbodybox2d.hpp  worldbox2d.cpp  worldbox2d.hpp
adapters/bullet3/: bt3convert.hpp  bullet3.cpp  colliderbt3.hpp  jointbt3.cpp  jointbt3.hpp  rigidbodybt3.cpp  rigidbodybt3.hpp  worldbt3.hpp
adapters/cryptopp/: cryptopp.cpp  cryptoppaes.hpp  cryptoppgzip.hpp  cryptopprandom.hpp  cryptoppsha.hpp
adapters/freetype/: freetype.cpp  ftfontrenderer.cpp  ftfontrenderer.hpp
adapters/glfw/: glfw.cpp  glfwinclude.hpp  glfwinput.cpp  glfwinput.hpp  glfwtypeconverter.hpp  glfwwindow.cpp  glfwwindow.hpp  monitorglfw.hpp
adapters/glslang/: glslang.cpp
adapters/openal-soft/: oalaudiobuffer.cpp  oalaudiobuffer.hpp  oalaudiocontext.cpp  oalaudiocontext.hpp  oalaudiodevice.cpp  oalaudiodevice.hpp  oalaudiolistener.cpp  oalaudiolistener.hpp  oalaudiosource.cpp  oalaudiosource.hpp  oalcheckerror.cpp  oalcheckerror.hpp  openal.cpp  openalinclude.hpp
adapters/opengl/: colorbytesize.hpp  compiledpipeline.hpp  contextgl.cpp  contextgl.hpp  fencegl.hpp  graphresources.hpp  heapgl.cpp  heapgl.hpp  heapmappinggl.hpp  heaptransfergl.hpp  ogldebug.hpp  opengl.cpp  passresources.hpp  pipelinecachegl.cpp  pipelinecachegl.hpp  rendergraphruntimeogl.cpp  rendergraphruntimeogl.hpp  resourcescope.hpp  semaphoregl.hpp  surfacegl.cpp  surfacegl.hpp  typeconversion.hpp
adapters/opengl2/: compiledpipeline.hpp  contextgl.cpp  contextgl.hpp  opengl2.cpp  shadercompilerglsl.cpp  shadercompilerglsl.hpp
adapters/sndfile/: sndfile.cpp
adapters/vulkan/: vkerror.hpp  vulkan.cpp
adapters/yoga/: yoga.cpp
cmake/: adapters.cmake  compileshaders.cmake  config.cmake  drivers.cmake  drivers_dependencies.cmake  engine.cmake  imgui.cmake  implot.cmake  openmp.cmake  platform.cmake  setup.cmake  shadercompiler.cmake  tests.cmake  thirdparty.cmake  tools.cmake  xengine.cmake
cmake/toolchains/: android-arm64-v8a.cmake  android-armeabi-v6.cmake  android-armeabi-v7a.cmake  android-armeabi.cmake  android-mips.cmake  android-mips64.cmake  android-x86.cmake  android-x86_64.cmake  mingw-x64.cmake  mingw-x86.cmake
drivers/: README.md
drivers/android/: androidapp.cpp
drivers/glslang/: glslangcompiler.cpp
drivers/opengl/: README.md  fgruntimeogl.cpp  oglconversion.hpp  oglinclude.hpp  opengl_checkerror.hpp  opengl_conversion.hpp  opengl_include.hpp
engine/include/: xengine.hpp
include/: engine-export.hpp  engine.hpp  xengine-export.hpp  xengine.hpp
platform/: README.md
tools/: README.md
(+2564 files in other folders)
